--- a/game.project
+++ b/game.project
@@ -2,7 +2,7 @@
 title = Pitoppa
 
 [bootstrap]
-main_collection = /main/title/title.collectionc
+main_collection = /main/main.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
