--- a/game.project
+++ b/game.project
@@ -1,8 +1,10 @@
 [project]
 title = Pitoppa
+dependencies = https://github.com/britzl/defold-orthographic/archive/2.9.1.zip
 
 [bootstrap]
 main_collection = /main/main.collectionc
+render = /orthographic/render/orthographic.renderc
 
 [input]
 game_binding = /input/game.input_bindingc
